# yt-transcription-summarizer

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/yt_transcription_summarizer/: logic.py  prompts.py  schema.py
tests/: conftest.py  test_cli.py  test_logic.py
