[project]
name = "yt-transcription-summarizer"
version = "0.1.0"
description = "Fetches a YouTube transcript and generates a structured Obsidian resource note."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "local-first-common",
    "youtube-transcript-api>=0.6.3",
    "yt-dlp>=2025.01.15",
]

[project.scripts]
yt-summarize = "yt_transcription_summarizer.logic:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_transcription_summarizer"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
local-first-common = {path = "../local-first-common", editable = true}

[tool.pytest.ini_options]
pythonpath = ["src"]
